force-app/main/default/objects/Avalia_o_Continuada__c/Avalia_o_Continuada__c.object-meta.xml
<CustomObject>
    <label>Avaliação Continuada</label>
    <nameField>
        <displayFormat>ACF {000000}</displayFormat>
        <label>N° do Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avaliações Continuadas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>