force-app/main/default/objects/Avalia_o_Continuada__c/fields/ndice_de_Entrega_em_Conformidade__c.field-meta.xml
<CustomField>
    <fullName>ndice_de_Entrega_em_Conformidade__c</fullName>
    <label>Qtd. de Entregas em Conformidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>