force-app/main/default/objects/Avalia_o_Continuada__c/fields/ndice_de_Servi_os_em_Garantia__c.field-meta.xml
<CustomField>
    <fullName>ndice_de_Servi_os_em_Garantia__c</fullName>
    <label>Qtd de Serviços em Garantia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>