force-app/main/default/objects/Avalia_o_Continuada__c/fields/Nota_da_Avalia_o3__c.field-meta.xml
<CustomField>
    <fullName>Nota_da_Avalia_o3__c</fullName>
    <formula>ndice_de_Servi_os_em_Garantia__c /  Qtd_de_Produto_s_Servi_o_s__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nota da Avaliação de Garantia de Fab.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>