force-app/main/default/objects/Avalia_o_Continuada__c/fields/Qtd_de_Produto_s_Servi_o_s__c.field-meta.xml
<CustomField>
    <fullName>Qtd_de_Produto_s_Servi_o_s__c</fullName>
    <label>Qtd de Produto(s)/Serviço(s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>