force-app/main/default/objects/Avalia_o_Continuada__c/fields/Respons_vel_pela_Avalia_o__c.field-meta.xml
<CustomField>
    <fullName>Respons_vel_pela_Avalia_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pela Avaliação</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Avaliações Continuadas</relationshipLabel>
    <relationshipName>Avalia_es_Continuadas_del</relationshipName>
    <type>Lookup</type>
</CustomField>