force-app/main/default/objects/Avalia_o_Continuada__c/recordTypes/PRODUTOS.recordType-meta.xml
<RecordType>
    <fullName>PRODUTOS</fullName>
    <active>true</active>
    <description>AVALIAÇÃO DE FORNECEDORES DE PRODUTOS</description>
    <label>PRODUTOS</label>
</RecordType>