force-app/main/default/objects/Avalia_o_Continuada__c/recordTypes/SERVI_OS.recordType-meta.xml
<RecordType>
    <fullName>SERVI_OS</fullName>
    <active>true</active>
    <description>AVALIAÇÃO DE FORNECEDORES DE SERVIÇOS</description>
    <label>SERVIÇOS</label>
</RecordType>